Added buddyship feature.
